- GWT: GwtApplicationConfiguration and GWT backend now support an application to be resizable or fixed size. You can remove your own resizing code from your HTMLLaunchers.
- GWT: Assets in distribute build are renamed with md5 hash suffix to bypass browser cache on changes
- API Addition: Pixmap.downloadFromUrl() downloads an image from http(s) URLs and passes it back as a Pixmap on all platforms
- Added support for Linux ARM builds.
	- 32-bit: ARMv7/armhf
	- 64-bit: ARMv8/AArch64
- API Change: Removed arm abi from SharedLibraryLoader
- API Addition: Added a Lwjgl3ApplicationConfiguration#foregroundFPS option.
- API Change: Utility classes are now final and have a private constructor to prevent instantiation.
- API Change: ScrollPane now supports all combinations of scrollBarsOnTop and fadeScrollBars.
- API Addition: Added new methods with a "deg" suffix in the method's name for all Vector2 degrees-based methods and deprecated the old ones.
- API Change: Vector2 angleRad(Vector2) now correctly return counter-clockwise angles.
- API Addition: Added Slider#setVisualPercent.
- API Change: Enabling fullscreen mode on the lwjgl3 backend now automatically sets the vsync setting again.
- API Addition: Added put(key, value, defaultValue) for maps with primitive keys, so the old value can be returned.
- API Addition: Added ObjectLongMap.

[1.9.11]
- Update to MobiVM 2.3.8
- Update to LWJGL 3.2.3
- Fixed AndroidInput crashes due to missing array resize (pressure array).
- API Change: Ray#set methods and Ray#mul(Matrix4) normalize direction vector. Use public field to set and avoid nor()
- API Change: New internal implementation of all Map and Set classes (except ArrayMap) to avoid OutOfMemoryErrors when too many keys collide. This also helps resistance against malicious users who can choose problematic names.