@@ -303,56 +303,44 @@ public class Preloader {
 		return directories.containsKey(file);
 	}
 
-	private boolean isChild(String path, String file) {
-		return path.startsWith(file) && (path.indexOf('/', file.length() + 1) < 0);
+	private boolean isChild(String filePath, String directory) {
+		return filePath.startsWith(directory + "/") && (filePath.indexOf('/', directory.length() + 1) < 0);
 	}
 
-	public FileHandle[] list(String file) {
-		Array<FileHandle> files = new Array<FileHandle>();
-		for (String path : texts.keys()) {
-			if (isChild(path, file)) {
-				files.add(new GwtFileHandle(this, path, FileType.Internal));
+	public FileHandle[] list (final String file) {
+		return getMatchedAssetFiles(new FilePathFilter() {
+			@Override
+			public boolean accept (String path) {
+				return isChild(path, file);
 			}
-		}
-		FileHandle[] list = new FileHandle[files.size];
-		System.arraycopy(files.items, 0, list, 0, list.length);
-		return list;
+		});
 	}
 
-	public FileHandle[] list(String file, FileFilter filter) {
-		Array<FileHandle> files = new Array<FileHandle>();
-		for (String path : texts.keys()) {
-			if (isChild(path, file) && filter.accept(new File(path))) {
-				files.add(new GwtFileHandle(this, path, FileType.Internal));
+	public FileHandle[] list (final String file, final FileFilter filter) {
+		return getMatchedAssetFiles(new FilePathFilter() {
+			@Override
+			public boolean accept (String path) {
+				return isChild(path, file) && filter.accept(new File(path));
 			}
-		}
-		FileHandle[] list = new FileHandle[files.size];
-		System.arraycopy(files.items, 0, list, 0, list.length);
-		return list;
+		});
 	}
 
-	public FileHandle[] list(String file, FilenameFilter filter) {
-		Array<FileHandle> files = new Array<FileHandle>();
-		for (String path : texts.keys()) {
-			if (isChild(path, file) && filter.accept(new File(file), path.substring(file.length() + 1))) {
-				files.add(new GwtFileHandle(this, path, FileType.Internal));
+	public FileHandle[] list (final String file, final FilenameFilter filter) {
+		return getMatchedAssetFiles(new FilePathFilter() {
+			@Override
+			public boolean accept (String path) {
+				return isChild(path, file) && filter.accept(new File(file), path.substring(file.length() + 1));
 			}
-		}
-		FileHandle[] list = new FileHandle[files.size];
-		System.arraycopy(files.items, 0, list, 0, list.length);
-		return list;
+		});
 	}
 
-	public FileHandle[] list(String file, String suffix) {
-		Array<FileHandle> files = new Array<FileHandle>();
-		for (String path : texts.keys()) {
-			if (isChild(path, file) && path.endsWith(suffix)) {
-				files.add(new GwtFileHandle(this, path, FileType.Internal));
+	public FileHandle[] list (final String file, final String suffix) {
+		return getMatchedAssetFiles(new FilePathFilter() {
+			@Override
+			public boolean accept (String path) {
+				return isChild(path, file) && path.endsWith(suffix);
 			}
-		}
-		FileHandle[] list = new FileHandle[files.size];
-		System.arraycopy(files.items, 0, list, 0, list.length);
-		return list;
+		});
 	}
 
 	public long length(String file) {
@@ -375,4 +363,20 @@ public class Preloader {
 		return 0;
 	}
 
+	private interface FilePathFilter {
+		boolean accept (String path);
+	}
+
+	private FileHandle[] getMatchedAssetFiles (FilePathFilter filter) {
+		Array<FileHandle> files = new Array<FileHandle>();
+		for (String file : assetNames.keys()) {
+			if (filter.accept(file)) {
+				files.add(new GwtFileHandle(this, file, FileType.Internal));
+			}
+		}
+
+		FileHandle[] filesArray = new FileHandle[files.size];
+		System.arraycopy(files.items, 0, filesArray, 0, filesArray.length);
+		return filesArray;
+	}
 }
