@@ -151,9 +151,11 @@ public class FilesTest extends GdxTest {
 		try {
 			testClasspath();
 			testInternal();
-			testExternal();
-			testAbsolute();
-			testLocal();
+			if (!(Gdx.app.getType() == ApplicationType.WebGL)) {
+				testExternal();
+				testAbsolute();
+				testLocal();
+			}
 		} catch (IOException ex) {
 			throw new RuntimeException(ex);
 		}
@@ -214,6 +216,7 @@ public class FilesTest extends GdxTest {
 		}
 		if (!dir.isDirectory()) fail();
 		if (dir.list().length == 0) fail();
+		Gdx.app.log("FilesTest", "Files in data: " + Arrays.toString(dir.list()) + " (" + dir.list().length + ")");
 		FileHandle child = dir.child("badlogic.jpg");
 		if (!child.name().equals("badlogic.jpg")) fail();
 		if (!child.nameWithoutExtension().equals("badlogic")) fail();
@@ -221,14 +224,6 @@ public class FilesTest extends GdxTest {
 		if (Gdx.app.getType() != ApplicationType.Android) {
 			if (!child.parent().exists()) fail();
 		}
-		FileHandle copy = Gdx.files.external("badlogic.jpg-copy");
-		copy.delete();
-		if (copy.exists()) fail();
-		handle.copyTo(copy);
-		if (!copy.exists()) fail();
-		if (copy.length() != 68465) fail();
-		copy.delete();
-		if (copy.exists()) fail();
 		handle.read().close();
 		if (handle.readBytes().length != handle.length()) fail();
 	}
@@ -301,6 +296,14 @@ public class FilesTest extends GdxTest {
 		if (handle.isDirectory()) fail();
 		handle.delete();
 		handle.deleteDirectory();
+		copy = Gdx.files.external("badlogic.jpg-copy");
+		copy.delete();
+		if (copy.exists()) fail();
+		handle.copyTo(copy);
+		if (!copy.exists()) fail();
+		if (copy.length() != 68465) fail();
+		copy.delete();
+		if (copy.exists()) fail();
 	}
 
 	private void testAbsolute () throws IOException {
